updating list of games

--- a/aboutme.html
+++ b/aboutme.html
@@ -98,16 +98,21 @@ p, ol li {
 <details>
     <summary>Video/Web/Mobile/PC Games I Used To Play, Occasionally Play, or Checked Out For A While</summary>
     <ol>
+        <li>(R)evolve</li>
         <li>2048</li>
         <li>2048 Bricks</li>
         <li>4 Pics 1 Word</li>
         <li>agar.io</li>
         <li>Amazeness - Survive the maze</li>
+        <li>Amazing Brick</li>
         <li>Amnesia: The Dark Descent</li>
         <li>Among Us!</li>
         <li>Angry Birds</li>
         <li>Angry Birds 2</li>
+        <li>Angry Birds Epic RPG</li>
+        <li>Angry Birds Seasons Free</li>
         <li>Ao Oni</li>
+        <li>Apex Legends Mobile</li>
         <li>Arrow.io</li>
         <li>Atomas</li>
         <li>Bad Ice Cream</li>
@@ -116,40 +121,67 @@ p, ol li {
         <li>Baldi's Basics Classic Remastered</li>
         <li>Baldi's Basics in Education and Learning</li>
         <li>Baldi's Basics Plus</li>
+        <li>Ballz</li>
+        <li>Bean Boy</li>
         <li>Bendy and the Ink Machine</li>
         <li>Bird 420 - MLG Flappy edition</li>
         <li>black (game)</li>
         <li>Blackbox - brain puzzles</li>
         <li>blue (game)</li>
+        <li>Bowmasters</li>
         <li>Brawl Stars</li>
         <li>Bricks n Balls</li>
+        <li>Can You Escape</li>
+        <li>Can You Escape 2</li>
         <li>Candy Crush Jelly Saga</li>
         <li>Candy Crush Saga</li>
         <li>Candy Crush Soda Saga</li>
         <li>Cards Against Humanity</li>
+        <li>CarrotFantasy</li>
         <li>Cat Mario (Syobon Action)</li>
         <li>chess.com</li>
+        <li>Circle</li>
         <li>Clash Royale</li>
+        <li>Clay Jam!</li>
         <li>Click the Colour and Not the Word</li>
         <li>Clustertruck</li>
         <li>cmplt</li>
+        <li>Coin Dozer Pro</li>
         <li>Color Ballz</li>
         <li>Color Fence - Mind Puzzler</li>
         <li>Color Switch</li>
         <li>Cookie Clicker</li>
+        <li>Cover Orange</li>
         <li>Crab Game</li>
         <li>Crossy Road</li>
         <li>Cuphead</li>
+        <li>Daddy Long Legs</li>
+        <li>Dead Ringer: Fear Yourself LITE</li>
         <li>diep.io</li>
+        <li>Do Not Disturb! Funny Game</li>
         <li>doge2048.com</li>
         <li>Doki Doki Literature Club</li>
+        <li>Doodle Jump</li>
+        <li>Doodle Jump 2</li>
+        <li>Doodle Jump - Insanely Good!</li>
+        <li>Doodle Jump Christmas PLUS</li>
+        <li>Doodle Jump Christmas Special</li>
+        <li>Doodle Jump Easter Special</li>
+        <li>Doodle Jump Race</li>
         <li>Dots & Co: A Puzzle Adventure</li>
+        <li>Draw Rider</li>
+        <li>Draw Rider Plus</li>
         <li>DUAL!</li>
+        <li>Dumb Ways To Die</li>
+        <li>Dumb Ways To Die 2: The Games</li>
+        <li>Dumb Ways To Die 3: World Tour</li>
         <li>Egg, Inc.</li>
         <li>Endless Sky</li>
+        <li>Eversion</li>
         <li>Exponential Idle</li>
         <li>Eyes - The Horror Game</li>
         <li>Feed The Head</li>
+        <li>Fire Balls 3D</li>
         <li>Fireboy and Watergirl in the Forest Temple</li>
         <li>Fireboy and Watergirl 2: In the Light Temple</li>
         <li>Fireboy and Watergirl 3: In the Ice Temple</li>
@@ -163,6 +195,7 @@ p, ol li {
         <li>Flow Free</li>
         <li>Fortnite</li>
         <li>FPS Chess</li>
+        <li>From The Darkness</li>
         <li>Fruit Ninja</li>
         <li>gameaboutsquares.com</li>
         <li>Gang Beasts</li>
@@ -173,6 +206,7 @@ p, ol li {
         <li>Geometry Dash Meltdown</li>
         <li>Geometry Dash Subzero</li>
         <li>Geometry Dash World</li>
+        <li>Geostorm</li>
         <li>Getting Over It</li>
         <li>gettoz.com</li>
         <li>Gravity Switch</li>
@@ -186,21 +220,28 @@ p, ol li {
         <li>Gum Drop Hop 4</li>
         <li>GunCrafter</li>
         <li>Hand Simulator</li>
+        <li>Happy Street</li>
         <li>Happy Wheels</li>
         <li>Hello Neighbor</li>
+        <li>Hill Climb Racing</li>
+        <li>I am Bread</li>
         <li>I Love Hue Too</li>
         <li>Identity V</li>
         <li>Illuminati vs. Memes MLG</li>
         <li>It Steals</li>
+        <li>Jelly Jump</li>
+        <li>Jump</li>
         <li>Just A Few More Doors</li>
         <li>Just More Doors</li>
         <li>Just Shapes and Beats</li>
         <li>Levers</li>
         <li>Little Alchemy</li>
         <li>Little Alchemy 2</li>
+        <li>Looney Tunes Dash!</li>
         <li>Lords Mobile: Kingdom Wars</li>
         <li>LSD: Dream Emulator</li>
         <li>Make Them Fall</li>
+        <li>Mario Kart Tour</li>
         <li>Meme Clicker - MLG Christmas</li>
         <li>Meme Crush - MLG Kush edition</li>
         <li>Merge Town!</li>
@@ -209,6 +250,7 @@ p, ol li {
         <li>Minesweeper Classic: Retro</li>
         <li>Mini DAYZ: Zombie Survival</li>
         <li>Money Tree: Business Tycoon</li>
+        <li>MONOPOLY Game</li>
         <li>Monster Legends: Collect them!</li>
         <li>MonsterCrafter</li>
         <li>Monstrum</li>
@@ -220,6 +262,7 @@ p, ol li {
         <li>osu!</li>
         <li>Pac-Man</li>
         <li>PAC-MAN 256</li>
+        <li>Penguin Diner: Restaurant Dash</li>
         <li>PewDiePie's Tuber Simulator</li>
         <li>PewDuckPie</li>
         <li>Phases</li>
@@ -227,13 +270,16 @@ p, ol li {
         <li>Piano Tiles 2</li>
         <li>PickCrafter - Idle Craft RPG</li>
         <li>Pinball Sniper</li>
+        <li>Pineapple Pen</li>
         <li>pink (game)</li>
         <li>Pixel Gun 3D</li>
         <li>Planet Bomber!</li>
         <li>Plants vs. Zombies</li>
         <li>Plants vs. Zombies 2</li>
+        <li>Plants War</li>
         <li>Pokemon Go</li>
         <li>PUBG Mobile</li>
+        <li>Pyro Jump</li>
         <li>QT</li>
         <li>Raft</li>
         <li>Really Bad Chess</li>
@@ -247,32 +293,48 @@ p, ol li {
         <li>Robbery Bob 2: Double Trouble</li>
         <li>Roblox</li>
         <li>Rolly Vortex</li>
+        <li>SCRABBLE</li>
         <li>Scribblenauts Remix</li>
         <li>Scribblenauts Unlimited</li>
         <li>Sexy Hiking</li>
         <li>Shotgun King: The Final Checkmate</li>
         <li>Skyward</li>
+        <li>Slender: The Eight Pages</li>
         <li>slither.io</li>
         <li>Smash Hit</li>
         <li>Smove</li>
+        <li>Smurfs' Village</li>
         <li>Snake VS Block</li>
+        <li>Sonic Dash - Endless Runner</li>
         <li>Soul Knight</li>
         <li>Splashy Dots</li>
         <li>Spooky's Jump Scare Mansion</li>
         <li>spotthedifference.com</li>
+        <li>Stack</li>
+        <li>Stack Rabbit</li>
+        <li>Stay With Us Lite</li>
+        <li>Stick Hero</li>
         <li>Subway Surfers</li>
+        <li>Sudoku.com</li>
         <li>Suite 776</li>
+        <li>Super Mario Run</li>
         <li>Tadpole Tap</li>
+        <li>Tap The Frog: Doodle</li>
+        <li>Tasty Tadpoles</li>
         <li>Temple Run</li>
         <li>Temple Run 2</li>
         <li>Terraria</li>
+        <li>Test Chamber - Mind-bending Puzzles</li>
         <li>Tetris</li>
         <li>The Henry Stickmin Collection</li>
         <li>The Impossible Game</li>
         <li>The Impossible Game 2</li>
         <li>The Looker</li>
         <li>The Quest Keeper</li>
+        <li>The Sims FreePlay</li>
+        <li>The Sims Mobile</li>
         <li>The Useless Game!</li>
+        <li>The Walls</li>
         <li>The Witness</li>
         <li>Tomb of the Mask</li>
         <li>Trap Adventure</li>
@@ -284,8 +346,12 @@ p, ol li {
         <li>Trollface Quest 5</li>
         <li>Trolltube</li>
         <li>Two Dots</li>
+        <li>Unblock Me</li>
+        <li>Unroll Me</li>
         <li>Untitled Goose Game</li>
+        <li>Virtual Beggar</li>
         <li>Vlogger Go Viral: Tuber Life</li>
+        <li>Welcome to the Dungeon</li>
         <li>White Tiles - MLG Get Rekt edition</li>
         <li>Wiggle The Nipples</li>
         <li>Word Cookies!</li>
@@ -294,10 +360,11 @@ p, ol li {
         <li>Yandere Simulator</li>
         <li>yellow (game)</li>
         <li>yorg.io</li>
+        <li>ZigZag</li>
     </ol>
-    <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games.</h4>
+    <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games I used to play as a child.</h4>
 </details>
-<h2>This site was last updated on December 6, 2022.</h2>
+<h2>This site was last updated on December 9, 2022.</h2>
 
 <script>
 var texts = [
