updating the list
wow

--- a/aboutme.html
+++ b/aboutme.html
@@ -125,6 +125,7 @@ p, ol li {
         <li>Bean Boy</li>
         <li>Bendy and the Ink Machine</li>
         <li>Bird 420 - MLG Flappy edition</li>
+        <li>Bitcoin!</li>
         <li>black (game)</li>
         <li>Blackbox - brain puzzles</li>
         <li>blue (game)</li>
@@ -157,6 +158,7 @@ p, ol li {
         <li>Cuphead</li>
         <li>Daddy Long Legs</li>
         <li>Dead Ringer: Fear Yourself LITE</li>
+        <li>Deltarune</li>
         <li>diep.io</li>
         <li>Do Not Disturb! Funny Game</li>
         <li>doge2048.com</li>
@@ -177,9 +179,11 @@ p, ol li {
         <li>Dumb Ways To Die 3: World Tour</li>
         <li>Egg, Inc.</li>
         <li>Endless Sky</li>
+        <li>Endoparasitic</li>
         <li>Eversion</li>
         <li>Exponential Idle</li>
         <li>Eyes - The Horror Game</li>
+        <li>Façade</li>
         <li>Feed The Head</li>
         <li>Fire Balls 3D</li>
         <li>Fireboy and Watergirl in the Forest Temple</li>
@@ -225,6 +229,7 @@ p, ol li {
         <li>Hello Neighbor</li>
         <li>Hill Climb Racing</li>
         <li>I am Bread</li>
+        <li>I Love Hue</li>
         <li>I Love Hue Too</li>
         <li>Identity V</li>
         <li>Illuminati vs. Memes MLG</li>
@@ -259,6 +264,7 @@ p, ol li {
         <li>Muddy Heights</li>
         <li>Muddy Heights 2</li>
         <li>Not Not</li>
+        <li>Omori</li>
         <li>osu!</li>
         <li>Pac-Man</li>
         <li>PAC-MAN 256</li>
@@ -277,7 +283,7 @@ p, ol li {
         <li>Plants vs. Zombies</li>
         <li>Plants vs. Zombies 2</li>
         <li>Plants War</li>
-        <li>Pokemon Go</li>
+        <li>Pokémon Go</li>
         <li>PUBG Mobile</li>
         <li>Pyro Jump</li>
         <li>QT</li>
@@ -293,6 +299,7 @@ p, ol li {
         <li>Robbery Bob 2: Double Trouble</li>
         <li>Roblox</li>
         <li>Rolly Vortex</li>
+        <li>Safety Blanket</li>
         <li>SCRABBLE</li>
         <li>Scribblenauts Remix</li>
         <li>Scribblenauts Unlimited</li>
@@ -321,6 +328,7 @@ p, ol li {
         <li>Tadpole Tap</li>
         <li>Tap The Frog: Doodle</li>
         <li>Tasty Tadpoles</li>
+        <li>Telepaint!</li>
         <li>Temple Run</li>
         <li>Temple Run 2</li>
         <li>Terraria</li>
@@ -347,11 +355,15 @@ p, ol li {
         <li>Trolltube</li>
         <li>Two Dots</li>
         <li>Unblock Me</li>
+        <li>Undertale</li>
+        <li>UNO</li>
         <li>Unroll Me</li>
         <li>Untitled Goose Game</li>
         <li>Virtual Beggar</li>
         <li>Vlogger Go Viral: Tuber Life</li>
         <li>Welcome to the Dungeon</li>
+        <li>Welcome to the Game</li>
+        <li>Welcome to the Game II</li>
         <li>White Tiles - MLG Get Rekt edition</li>
         <li>Wiggle The Nipples</li>
         <li>Word Cookies!</li>
@@ -362,9 +374,9 @@ p, ol li {
         <li>yorg.io</li>
         <li>ZigZag</li>
     </ol>
-    <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games I used to play as a child.</h4>
+    <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games I used to play as a child or from my short free time periods.</h4>
 </details>
-<h2>This site was last updated on December 9, 2022.</h2>
+<h2>This site was last updated on December 20, 2022.</h2>
 
 <script>
 var texts = [
