--- a/aboutme.html
+++ b/aboutme.html
@@ -145,6 +145,7 @@ p, ol li {
         <li>Clash Royale</li>
         <li>Clay Jam!</li>
         <li>Click the Colour and Not the Word</li>
+        <li>Close Your Eyes</li>
         <li>Clustertruck</li>
         <li>cmplt</li>
         <li>Coin Dozer Pro</li>
@@ -170,6 +171,7 @@ p, ol li {
         <li>Doodle Jump Christmas Special</li>
         <li>Doodle Jump Easter Special</li>
         <li>Doodle Jump Race</li>
+        <li>Door</li>
         <li>Dots & Co: A Puzzle Adventure</li>
         <li>Draw Rider</li>
         <li>Draw Rider Plus</li>
@@ -235,16 +237,19 @@ p, ol li {
         <li>Illuminati vs. Memes MLG</li>
         <li>It Steals</li>
         <li>Jelly Jump</li>
+        <li>JKLM.FUN Party Games</li>
         <li>Jump</li>
         <li>Just A Few More Doors</li>
         <li>Just More Doors</li>
         <li>Just Shapes and Beats</li>
+        <li>Kahoot!</li>
         <li>Levers</li>
         <li>Little Alchemy</li>
         <li>Little Alchemy 2</li>
         <li>Looney Tunes Dash!</li>
         <li>Lords Mobile: Kingdom Wars</li>
         <li>LSD: Dream Emulator</li>
+        <li>MADiSON</li>
         <li>Make Them Fall</li>
         <li>Mario Kart Tour</li>
         <li>Meme Clicker - MLG Christmas</li>
@@ -365,6 +370,7 @@ p, ol li {
         <li>Welcome to the Game</li>
         <li>Welcome to the Game II</li>
         <li>White Tiles - MLG Get Rekt edition</li>
+        <li>Who Must Die</li>
         <li>Wiggle The Nipples</li>
         <li>Word Cookies!</li>
         <li>Wordscapes</li>
@@ -376,7 +382,7 @@ p, ol li {
     </ol>
     <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games I used to play as a child or from my short free time periods.</h4>
 </details>
-<h2>This site was last updated on December 20, 2022.</h2>
+<h2>This site was last updated on Jan 19, 2023.</h2>
 
 <script>
 var texts = [
