--- a/aboutme.html
+++ b/aboutme.html
@@ -103,8 +103,11 @@ p, ol li {
         <li>2048 Bricks</li>
         <li>4 Pics 1 Word</li>
         <li>agar.io</li>
+        <li>Alien: Isolation</li>
         <li>Amazeness - Survive the maze</li>
         <li>Amazing Brick</li>
+        <li>Anmesia: A Machine For Pigs</li>
+        <li>Anmesia: Rebirth</li>
         <li>Amnesia: The Dark Descent</li>
         <li>Among Us!</li>
         <li>Angry Birds</li>
@@ -134,12 +137,14 @@ p, ol li {
         <li>Bricks n Balls</li>
         <li>Can You Escape</li>
         <li>Can You Escape 2</li>
+        <li>Can Your Pet?</li>
         <li>Candy Crush Jelly Saga</li>
         <li>Candy Crush Saga</li>
         <li>Candy Crush Soda Saga</li>
         <li>Cards Against Humanity</li>
         <li>CarrotFantasy</li>
         <li>Cat Mario (Syobon Action)</li>
+        <li>Catastrophe Crow</li>
         <li>chess.com</li>
         <li>Circle</li>
         <li>Clash Royale</li>
@@ -173,9 +178,14 @@ p, ol li {
         <li>Doodle Jump Race</li>
         <li>Door</li>
         <li>Dots & Co: A Puzzle Adventure</li>
+        <li>Draw A Stickman: EPIC</li>
+        <li>Draw A Stickman: EPIC 2</li>
+        <li>Draw A Stickman: EPIC 3</li>
         <li>Draw Rider</li>
         <li>Draw Rider Plus</li>
         <li>DUAL!</li>
+        <li>Duck Season</li>
+        <li>Dude, Stop</li>
         <li>Dumb Ways To Die</li>
         <li>Dumb Ways To Die 2: The Games</li>
         <li>Dumb Ways To Die 3: World Tour</li>
@@ -183,10 +193,12 @@ p, ol li {
         <li>Endless Sky</li>
         <li>Endoparasitic</li>
         <li>Eversion</li>
+        <li>Exoptable Money</li>
         <li>Exponential Idle</li>
         <li>Eyes - The Horror Game</li>
         <li>Façade</li>
         <li>Feed The Head</li>
+        <li>Feed Your Cat.</li>
         <li>Fire Balls 3D</li>
         <li>Fireboy and Watergirl in the Forest Temple</li>
         <li>Fireboy and Watergirl 2: In the Light Temple</li>
@@ -196,6 +208,10 @@ p, ol li {
         <li>Fireboy and Watergirl 6: Fairy Tales</li>
         <li>Fish Eat Fish</li>
         <li>Fit In The Hole</li>
+        <li>Five Nights At Freddy's</li>
+        <li>Five Nights At Freddy's 2</li>
+        <li>Five Nights At Freddy's 3</li>
+        <li>Five Nights At Freddy's 4</li>
         <li>Flappy Bird</li>
         <li>flappy-2048.com</li>
         <li>Flow Free</li>
@@ -244,6 +260,7 @@ p, ol li {
         <li>Just Shapes and Beats</li>
         <li>Kahoot!</li>
         <li>Levers</li>
+        <li>LIMBO</li>
         <li>Little Alchemy</li>
         <li>Little Alchemy 2</li>
         <li>Looney Tunes Dash!</li>
@@ -251,6 +268,7 @@ p, ol li {
         <li>LSD: Dream Emulator</li>
         <li>MADiSON</li>
         <li>Make Them Fall</li>
+        <li>Mannequin House</li>
         <li>Mario Kart Tour</li>
         <li>Meme Clicker - MLG Christmas</li>
         <li>Meme Crush - MLG Kush edition</li>
@@ -270,13 +288,18 @@ p, ol li {
         <li>Muddy Heights 2</li>
         <li>Not Not</li>
         <li>Omori</li>
+        <li>One Chance</li>
         <li>osu!</li>
+        <li>Outlast</li>
         <li>Pac-Man</li>
         <li>PAC-MAN 256</li>
+        <li>Papers Please</li>
         <li>Penguin Diner: Restaurant Dash</li>
+        <li>People Playground</li>
         <li>PewDiePie's Tuber Simulator</li>
         <li>PewDuckPie</li>
         <li>Phases</li>
+        <li>Phasmophobia</li>
         <li>Piano Tiles</li>
         <li>Piano Tiles 2</li>
         <li>PickCrafter - Idle Craft RPG</li>
@@ -288,7 +311,9 @@ p, ol li {
         <li>Plants vs. Zombies</li>
         <li>Plants vs. Zombies 2</li>
         <li>Plants War</li>
+        <li>Please, Don't Touch Anything</li>
         <li>Pokémon Go</li>
+        <li>Presentable Liberty</li>
         <li>PUBG Mobile</li>
         <li>Pyro Jump</li>
         <li>QT</li>
@@ -317,6 +342,7 @@ p, ol li {
         <li>Smove</li>
         <li>Smurfs' Village</li>
         <li>Snake VS Block</li>
+        <li>Solitude</li>
         <li>Sonic Dash - Endless Runner</li>
         <li>Soul Knight</li>
         <li>Splashy Dots</li>
@@ -330,6 +356,8 @@ p, ol li {
         <li>Sudoku.com</li>
         <li>Suite 776</li>
         <li>Super Mario Run</li>
+        <li>SUPERHOT</li>
+        <li>SUPERHOT: MIND CONTROL DELETE</li>
         <li>Tadpole Tap</li>
         <li>Tap The Frog: Doodle</li>
         <li>Tasty Tadpoles</li>
@@ -339,6 +367,7 @@ p, ol li {
         <li>Terraria</li>
         <li>Test Chamber - Mind-bending Puzzles</li>
         <li>Tetris</li>
+        <li>The Escapists</li>
         <li>The Henry Stickmin Collection</li>
         <li>The Impossible Game</li>
         <li>The Impossible Game 2</li>
@@ -346,10 +375,15 @@ p, ol li {
         <li>The Quest Keeper</li>
         <li>The Sims FreePlay</li>
         <li>The Sims Mobile</li>
+        <li>The Stanley Parable</li>
+        <li>The Stanley Parable: Ultra Deluxe</li>
         <li>The Useless Game!</li>
         <li>The Walls</li>
         <li>The Witness</li>
+        <li>There Is No Game: Wrong Dimension</li>
         <li>Tomb of the Mask</li>
+        <li>Totally Accurate Battle Simulator</li>
+        <li>Totally Accurate Battle Zombielator</li>
         <li>Trap Adventure</li>
         <li>Trap Adventure 2</li>
         <li>Trollface Quest</li>
@@ -366,6 +400,8 @@ p, ol li {
         <li>Untitled Goose Game</li>
         <li>Virtual Beggar</li>
         <li>Vlogger Go Viral: Tuber Life</li>
+        <li>We Become What We Behold</li>
+        <li>We Happy Few</li>
         <li>Welcome to the Dungeon</li>
         <li>Welcome to the Game</li>
         <li>Welcome to the Game II</li>
@@ -382,7 +418,7 @@ p, ol li {
     </ol>
     <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games I used to play as a child or from my short free time periods.</h4>
 </details>
-<h2>This site was last updated on Jan 19, 2023.</h2>
+<h2>This site was last updated on Jan 28, 2023.</h2>
 
 <script>
 var texts = [
