almost forgot to link

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ ul li a:hover {
 	</ul>
 	<h4>Normal Projects</h4>
 	<ul>
+	<li><a href="./followtheinstructions/" class="specs">Follow The Instructions</a></li>
 	<li><a href="./numbermanipulator/" class="specs">Number Manipulator</a></li>
 	<li><a href="./SCPDCALC/" class="specs">SciPred's Calculator</a></li>
 	<li><a href="./ScrollDown/" class="specs">Scroll Down</a></li>
