--- a/aboutme.html
+++ b/aboutme.html
@@ -415,6 +415,7 @@ p, ol li {
         <li>yellow (game)</li>
         <li>yorg.io</li>
         <li>ZigZag</li>
+        <li>ZType</li>
     </ol>
     <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games I used to play as a child or from my short free time periods.</h4>
 </details>
