--- a/aboutme.html
+++ b/aboutme.html
@@ -93,13 +93,16 @@ p, ol li {
 </details>
 <details>
     <summary>Games I Usually Play</summary>
-    <p>Minecraft (Java Edition), Geometry Dash.</p>
+    <p>Minecraft (Java Edition), Geometry Dash, Honkai: Star Rail.</p>
 </details>
 <details>
     <summary>Video/Web/Mobile/PC Games I Used To Play, Occasionally Play, or Checked Out For A While</summary>
     <ol>
         <li>(R)evolve</li>
         <li>2048</li>
+        <li>2048 10x10</li>
+        <li>2048 3D</li>
+        <li>2048 4D</li>
         <li>2048 Bricks</li>
         <li>4 Pics 1 Word</li>
         <li>agar.io</li>
@@ -110,6 +113,7 @@ p, ol li {
         <li>Anmesia: Rebirth</li>
         <li>Amnesia: The Dark Descent</li>
         <li>Among Us!</li>
+        <li>ANATOMY</li>
         <li>Angry Birds</li>
         <li>Angry Birds 2</li>
         <li>Angry Birds Epic RPG</li>
@@ -125,6 +129,7 @@ p, ol li {
         <li>Baldi's Basics in Education and Learning</li>
         <li>Baldi's Basics Plus</li>
         <li>Ballz</li>
+        <li>Ballz Break</li>
         <li>Bean Boy</li>
         <li>Bendy and the Ink Machine</li>
         <li>Bird 420 - MLG Flappy edition</li>
@@ -133,11 +138,13 @@ p, ol li {
         <li>Blackbox - brain puzzles</li>
         <li>blue (game)</li>
         <li>Bowmasters</li>
+        <li>brain:code - tricky puzzles</li>
         <li>Brawl Stars</li>
         <li>Bricks n Balls</li>
         <li>Can You Escape</li>
         <li>Can You Escape 2</li>
         <li>Can Your Pet?</li>
+        <li>Candy Crush Friends Saga</li>
         <li>Candy Crush Jelly Saga</li>
         <li>Candy Crush Saga</li>
         <li>Candy Crush Soda Saga</li>
@@ -192,11 +199,13 @@ p, ol li {
         <li>Egg, Inc.</li>
         <li>Endless Sky</li>
         <li>Endoparasitic</li>
+        <li>Euclidea</li>
         <li>Eversion</li>
         <li>Exoptable Money</li>
         <li>Exponential Idle</li>
         <li>Eyes - The Horror Game</li>
         <li>Façade</li>
+        <li>Farm Heroes Saga</li>
         <li>Feed The Head</li>
         <li>Feed Your Cat.</li>
         <li>Fire Balls 3D</li>
@@ -293,6 +302,7 @@ p, ol li {
         <li>Outlast</li>
         <li>Pac-Man</li>
         <li>PAC-MAN 256</li>
+        <li>Paper.io 4</li>
         <li>Papers Please</li>
         <li>Penguin Diner: Restaurant Dash</li>
         <li>People Playground</li>
@@ -312,10 +322,12 @@ p, ol li {
         <li>Plants vs. Zombies 2</li>
         <li>Plants War</li>
         <li>Please, Don't Touch Anything</li>
+        <li>Pocket Chess</li>
         <li>Pokémon Go</li>
         <li>Presentable Liberty</li>
         <li>PUBG Mobile</li>
         <li>Pyro Jump</li>
+        <li>Pythagorea</li>
         <li>QT</li>
         <li>Raft</li>
         <li>Really Bad Chess</li>
@@ -367,10 +379,12 @@ p, ol li {
         <li>Terraria</li>
         <li>Test Chamber - Mind-bending Puzzles</li>
         <li>Tetris</li>
+        <li>The Confraternity of Toast</li>
         <li>The Escapists</li>
         <li>The Henry Stickmin Collection</li>
         <li>The Impossible Game</li>
         <li>The Impossible Game 2</li>
+        <li>The Joy Of Creation</li>
         <li>The Looker</li>
         <li>The Quest Keeper</li>
         <li>The Sims FreePlay</li>
@@ -419,7 +433,7 @@ p, ol li {
     </ol>
     <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games I used to play as a child or from my short free time periods.</h4>
 </details>
-<h2>This site was last updated on Jan 28, 2023.</h2>
+<h2>This site was last updated on May 3, 2023.</h2>
 
 <script>
 var texts = [
