--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>SCIPRED'S DOMAIN</title>
 <meta charset="UTF-8">
 <meta name="description" content="SciPred's Official Github Website. Special thanks to some people (you know who you are lol)">
+<meta keywords="SciPred, SciPreda, scipred, scipreda">
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="favicon.ico">
@@ -107,14 +108,21 @@ function openNav() {
 	document.body.style.background = "black";
 	gTag("h3")[0].innerHTML = choose([
 		"...say, haven't I seen you before?",
+		"...that's pretty much all there is to it.",
 		"Be warned, this may be a waste of your time.",
 		"Can't really guarantee you'd find anything here interesting, though.",
+		"Except the Discord Server Rules. That one was made out of pure necessity.",
 		"I don't know what you'd be doing here though.",
+		"In my opinion however, they lack the ability to be interesting.",
 		"Not sure what you can do here though.",
 		"Oh, a person. What was I to expect.",
+		"Or they were made for fun. That's more reasonable.",
+		"Please be mindful of your stay. I cannot be held responsible for the time you will have wasted here.",
 		"Though I doubt you'd find any of them interesting.",
 		"Well, that's it for now.",
-		"You can view them, or you can leave. It's up to you."
+		"Why'd you come here in the first place?",
+		"You can view them, or you can leave. It's up to you.",
+		"You definitely seem familiar. But then again, I'm just speculating."
 	]);
 	setTimeout(function(){
 		gTag("section")[0].style.opacity = "1";
