--- a/aboutme.html
+++ b/aboutme.html
@@ -141,6 +141,7 @@ p, ol li {
         <li>brain:code - tricky puzzles</li>
         <li>Brawl Stars</li>
         <li>Bricks n Balls</li>
+        <li>Broken Through</li>
         <li>Can You Escape</li>
         <li>Can You Escape 2</li>
         <li>Can Your Pet?</li>
@@ -422,6 +423,7 @@ p, ol li {
         <li>White Tiles - MLG Get Rekt edition</li>
         <li>Who Must Die</li>
         <li>Wiggle The Nipples</li>
+        <li>Will You Snail</li>
         <li>Word Cookies!</li>
         <li>Wordscapes</li>
         <li>World's Hardest Game</li>
@@ -433,7 +435,7 @@ p, ol li {
     </ol>
     <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games I used to play as a child or from my short free time periods.</h4>
 </details>
-<h2>This site was last updated on May 3, 2023.</h2>
+<h2>This site was last updated on May 17, 2023.</h2>
 
 <script>
 var texts = [
@@ -449,7 +451,7 @@ var texts = [
 "I'm 17, which is right below the general age of consent.",
 "Male. Straight, so you can throw away any wet fantasies of me being of the opposite gender.",
 "Playing, calculating, and thought experiments.",
-"Minecraft (Java Edition), Geometry Dash."
+"Minecraft (Java Edition), Geometry Dash, Honkai: Star Rail."
 ];
 function clearAndUpdate() {
     var ps = document.getElementsByTagName("p");
