--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	(Co-author claims may be an exception, but are you even one)
 
 	<li><a href="./numbermanipulator/" class="specs">Number Manipulator</a></li>
+
+	To note: the class is useless, find a use
 -->
 <style>
 html, body, section {
