adding an old project
2020 re

--- a/aboutme.html
+++ b/aboutme.html
@@ -57,43 +57,43 @@ p, ol li {
 <h3>Please note that some information may be outdated.</h3>
 <details>
     <summary>Name</summary>
-    <p>I'm SciPred, or SciencePredator1. I first chose this name playing Monster Legends. The name stuck and got shortened and now it's what I'm usually called. Some people call me Sci or Pred for convenience.</p>
+    <p>[loading]</p>
 </details>
 <details>
     <summary>Real Name</summary>
-    <p>I can't disclose that information publicly.</p>
+    <p>[loading]</p>
 </details>
 <details>
     <summary>Address</summary>
-    <p>I can't disclose that information publicly.</p>
+    <p>[loading]</p>
 </details>
 <details>
     <summary>Email Address</summary>
-    <p>Well, I guess I can disclose this one. It's science.mcpe@gmail.com, if you have any inquiries (or you maybe just want to send an email for fun.)</p>
+    <p>[loading]</p>
 </details>
 <details>
     <summary>Common Socials</summary>
-    <p>Discord: SciPred#4661. You can send direct messages at any time, but don't expect a response.</p>
-    <p>Reddit: u/SciPred. But I haven't been using that account for a while now, and I'm using an alt which I cannot disclose yet.</p>
-    <p>Twitter: SciPred, @scipreda. Don't confuse the name with the tag.</p>
-    <p>YouTube: SciPred, @SciPred. I think this should be obvious enough.</p>
-    <p>YouTube Minecraft Clips/Random Stuff: SkyPred, @skypred3676. No, I don't plan on changing that handle any time soon.</p>
+    <p>[loading]</p>
+    <p>[loading]</p>
+    <p>[loading]</p>
+    <p>[loading]</p>
+    <p>[loading]</p>
 </details>
 <details>
     <summary>Age</summary>
-    <p>I'm 17, which is right below the general age of consent.</p>
+    <p>[loading]</p>
 </details>
 <details>
     <summary>Gender</summary>
-    <p>Male. Straight, so you can throw away any wet fantasies of me being of the opposite gender.</p>
+    <p>[loading]</p>
 </details>
 <details>
     <summary>Hobbies</summary>
-    <p>Playing, calculating, and thought experiments.</p>
+    <p>[loading]</p>
 </details>
 <details>
     <summary>Games I Usually Play</summary>
-    <p>Minecraft (Java Edition), Geometry Dash, Honkai: Star Rail.</p>
+    <p>[loading]</p>
 </details>
 <details>
     <summary>Video/Web/Mobile/PC Games I Used To Play, Occasionally Play, or Checked Out For A While</summary>
