--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ ul li a:hover {
 	<ul>
 	<li><a href="./experimental/achv2/" class="specs">Achievofile</a></li>
 	<li><a href="./experimental/RandomBinGen/" class="specs">Random Binary Generator</a></li>
+	<li><a href="./experimental/Sway/" class="specs">Sway</a></li>
 	</ul>
 
 	<h5>SciPred is not an expert. He is, however, prone to making things that other people have probably already made - except with a little less effort and even more pointlessness.</h5>
